<resources>
    <string name="app_name">Dice Roller</string>
    <string name="roll">Roll</string>
    <string name="redtheme">Red</string>
    <string name="greentheme">Green</string>
    <string name="darktheme">Dark</string>
    <string name="sakuratheme">Sakura</string>
    <string name="snakestheme">Snakes</string>
    <string name="monsterstheme">Monsters</string>
    <string name="review_thanks">Thank you for leaving a review!</string>
</resources>