<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/red"
        android:title="@string/redtheme"
        app:showAsAction="never" />
    <item
        android:id="@+id/green"
        android:title="@string/greentheme"
        app:showAsAction="never" />
    <item
        android:id="@+id/dark"
        android:title="@string/darktheme"
        app:showAsAction="never" />
    <item
        android:id="@+id/sakura"
        android:title="@string/sakuratheme"
        app:showAsAction="never" />
    <item
        android:id="@+id/snakes"
        android:title="@string/snakestheme"
        app:showAsAction="never" />
    <item
        android:id="@+id/monsters"
        android:title="@string/monsterstheme"
        app:showAsAction="never" />
</menu>